# CMakePractice

./: CMakeLists.txt  README.md  tutorial.cpp
CPPRest/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cc
HyrisePractice/: example  example.cpp  makefile
HyrisePractice/noHyrise/: makefile  noParser  noParser.cpp  secret.json
Tutorial/: CMakeLists.txt
Tutorial/hello-exe/: CMakeLists.txt  main.cpp
Tutorial/say-hello/: CMakeLists.txt
Tutorial/say-hello/src/say-hello/: hello.cpp  hello.hpp
