cmake_minimum_required(VERSION "3.15.2")
project(Tutorial VERSION 1.0)

message(STATUS "I am a message")
set(MY_VARIABLE "I am a variable")
message(STATUS "Variable message = ${MY_VARIABLE}")

set(MY_BOOL "FALSE")
if(NOT MY_BOOL)
    message(STATUS "Condition true")
else()
    message(STATUS "Condition false")
endif()

set(MY_STRING "I am string")
set(MY_STRING2 "I am string2")
if(MY_STRING STREQUAL MY_STRING2)
    message(STATUS "Condition true")
elseif(MY_STRING MATCHES "I am string")
    message(STATUS "Else if true")
else()
    message(STATUS "Condition false")
endif()

set(my_value 4)
while(my_value LESS 10)
    message(STATUS "Value is ${my_value}")
    math(EXPR my_value "${my_value} + 1")
endwhile()

foreach(item IN ITEMS item1 item2 item3 item4)
    message(STATUS "Item is: ${item}")
endforeach()
foreach(num RANGE 2 10 2)
    message(STATUS "Num is: ${num}")
endforeach()

add_subdirectory(say-hello)
add_subdirectory(hello-exe)